--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,21 @@ body {
 .list{
   list-style: none;
 }
+.link{
+  text-decoration: none;
+}
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
 /* Логотип */
 
 .logo{
@@ -32,6 +47,7 @@ font-family: 'Raleway';
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+
 }
 
 .logo-text{
@@ -70,11 +86,11 @@ font-family: 'Raleway';
 
 /* Шапка */
 
-.heroy{
+.hero{
   background-color:var(--grey-bg-color);
 }
 
-.heroy-text{
+.hero-text{
   color:var(--white-color);
 
     font-weight: 900;
@@ -84,7 +100,7 @@ font-family: 'Raleway';
     text-transform: uppercase;
 }
 
-.heroy .button{
+.hero .button{
   background-color: var(--blue-color);
   color:var(--white-color);
   cursor: pointer;
@@ -99,22 +115,26 @@ font-family: 'Raleway';
 .section-title {
 color: var(--secondary-color-text);
 
-  font-weight: 700;
+}
+/* Особливості */
+.features .section-title{
+
+font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
 }
-/* Особливості */
+
 .features-text{
-    font-weight: 400;
+
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
+
 /* Чим ми займаємося */
 
-.example{
+.examples .section-title{
   
     font-weight: 700;
     font-size: 36px;
@@ -126,22 +146,21 @@ color: var(--secondary-color-text);
 .section.team{
   background-color: var(--team-bg-color);
 }
-.profession{
+.members .text{
 
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
 }
 
-.section-title.team{
+.team .section-title{
   
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
 }
-.section-title.member{
+.members .section-title{
   
     font-weight: 500;
     font-size: 16px;
@@ -153,10 +172,13 @@ color: var(--secondary-color-text);
 .footer{
   background-color: var(--grey-bg-color);
 }
+.footer-address{
+  font-style: normal;
+}
+
 .footer-address .text{
   color: var(--white-color);
 
-    font-weight: 400;
     font-size: 17px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -204,12 +226,11 @@ color: var(--secondary-color-text);
 .work-list .work-text{
 color: var(--primary-color-text);
 
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
 }
-.section-title.type{
+.work-list .section-title{
 
     font-weight: 700;
     font-size: 18px;
