--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ font-weight: 700;
 
 .filters .button{
   background-color: var(--team-bg-color);
-
+  cursor: pointer;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
